--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "backend-express-tutorial",
+  "name": "bookstore",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
