--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 NODE_ENV=development
 PORT=3030 
 HOSTNAME=localhost
+
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=bookstore
