--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "node --watch server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node ./src/migration/seed.js"
   },
@@ -12,15 +12,16 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.2"
+    "morgan": "^1.10.0"
   }
 }
