--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,11 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.10.0"
+    "mysql2": "^3.10.0",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "morgan": "^1.10.0"
+    "sequelize-cli": "^6.6.2"
   }
 }
