--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node --watch server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node ./src/migration/seed.js"
+    "seed": "node ./src/old_migrations/seed.js"
   },
   "author": "",
   "license": "ISC",
