--- a/server/src/config/config.json
+++ b/server/src/config/config.json
@@ -5,7 +5,7 @@
     "database": "bookstore",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "logging": false
+    "logging": true
   },
   "test": {
     "username": "root",
