--- a/server/src/config/config.json
+++ b/server/src/config/config.json
@@ -4,8 +4,7 @@
     "password": null,
     "database": "bookstore",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "logging": true
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
